# movie-metadata-capture

./: Cargo.toml  Config.toml  README.md
parser/: carib.toml  fanza.toml  fc2.toml  h4610.toml  heydouga.toml  javbus.toml  javdb.toml  kin8.toml  missav.toml  nanojav.toml  paco.toml
parsers/: carib.toml  fc2.toml  javbus.toml  javdb.toml  nanojav.toml
src/: azure_translator.rs  config.rs  core.rs  files.rs  lib.rs  main.rs  number_parser.rs  parser.rs  request.rs  scraping.rs  site_search.rs  strings.rs  translator.rs  xpath.rs
template/: parser.toml
tests/: azure_translator_test.rs  config_test.rs  core_test.rs  files_test.rs  number_parser_test.rs  parser_test.rs  request_test.rs  scraping_test.rs  translator_test.rs
