[package]
name = "movie-metadata-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
lazy_static = "1.4.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
tokio = { version = "1.27.0", features = ["full"] }
