[package]
name = "movie-metadata-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
futures = "0.3.28"
lazy_static = "1.4.0"
regex = "1.8.0"
reqwest = { version = "0.11.16", features = ["socks", "cookies"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
sxd_html = "0.1.1"
tokio = { version = "1.27.0", features = ["full"] }
url = "2.3.1"
urlencoding = "2.1.2"
