[package]
name = "movie-metadata-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
confy = "0.5.1"
dlib-face-recognition = { version = "0.3.0", features = ["dlib-face-recognition-sys", "embed-all"], path = "../dlib-face-recognition" }
futures = "0.3.28"
image = "0.24.6"
lazy_static = "1.4.0"
quick-xml = { version = "0.28.2", features = ["serialize"] }
regex = "1.8.0"
reqwest = { version = "0.11.16", features = ["socks", "cookies"] }
serde = { version = "1.0.160", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_derive = "1.0.160"
serde_json = "1.0.96"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
sxd_html = "0.1.1"
tokio = { version = "1.27.0", features = ["full"] }
url = "2.3.1"
urlencoding = "2.1.2"
